# advent-of-code-2022

./: .envrc  .gitignore  CMakeLists.txt  aoc.sh  flake.nix
01/: 01.b.py  01.cpp  01.pl  01a.py
02/: 02.pl  02a.py  02b.py
03/: 03.pl  03a.py  03b.py
04/: 04.pl  04a.py  04b.py
05/: 05.pl  05a.py  05b.py
06/: 06a.py  06b.py
07/: 07a.py  07b.py
08/: 08a.py  08b.py
09/: 09.py
10/: 10a.py  10b.py
11/: 11a.py  11b.py
12/: 12a.py  12b.py
13/: 13a.py  13b.py
14/: 14a.py  14b.py
15/: 15a.py  15b.py
languages/: cpp.nix  prolog.nix  python.nix
templates/: template.py
utils/: __init__.py  pack.pl
utils/prolog/: aoc_utils.pl
